k8s/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphic-prod-service
  namespace: morphic-prod
spec:
  type: ClusterIP
  selector:
    app: morphic-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
